--- a/packagetool/package.json
+++ b/packagetool/package.json
@@ -16,6 +16,7 @@
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
