--- a/packagetool/package.json
+++ b/packagetool/package.json
@@ -50,5 +50,6 @@
   "eslintConfig": {
     "extends": "airbnb-base"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "sideEffects":["*.css","*.less"]
 }
